design/k8s/base/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity
  labels:
    app.kubernetes.io/name: identity
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: identity
  ports:
    - name: http
      port: 8100
      targetPort: 8100
